@@ -27,7 +27,7 @@
 #include "clutter-gegl.h"
 #include "math.h"
 
-#define DEFAULT_COMPOSITION "<?xml version='1.0' encoding='UTF-8'?> <gegl> <node operation='crop'> <params> <param name='x'>0.000000</param> <param name='y'>0.000000</param> <param name='width'>400.000000</param> <param name='height'>290.000000</param> </params> </node> <node operation='over'> <node operation='shift'> <params> <param name='x'>50.000000</param> <param name='y'>113.000000</param> </params> </node> <node operation='dropshadow'> <params> <param name='opacity'>2.000000</param> <param name='x'>2.000000</param> <param name='y'>2.000000</param> <param name='radius'>3.000000</param> </params> </node> <node operation='text'> <params> <param name='string'>A graph based image processing and\ncompositing engine.</param> <param name='font'>Sans</param> <param name='size'>10.000000</param> <param name='color'>rgb(1.0000, 1.0000, 1.0000)</param> <param name='wrap'>-1</param> <param name='alignment'>0</param> <param name='width'>178</param> <param name='height'>26</param> </params> </node> </node> <node operation='over'> <node operation='shift'> <params> <param name='x'>132.000000</param> <param name='y'>180.000000</param> </params> </node> <node operation='dropshadow'> <params> <param name='opacity'>2.000000</param> <param name='x'>2.000000</param> <param name='y'>2.000000</param> <param name='radius'>3.000000</param> </params> </node> <node operation='text'> <params> <param name='string'>2000-2007 © Calvin Williamson, Caroline Dahloff, Manish Singh, Jay Cox, Daniel Rogers, Sven Neumann, Michael Natterer, Øyvind Kolås, Philip Lafleur, Dominik Ernst, Richard Kralovic, Kevin Cozens, Victor Bogado, Martin Nordholts, Geert Jordaens, Michael Schumacher, Garry R. Osgood and Jakub Steiner</param> <param name='font'>Sans</param> <param name='size'>10.458599</param> <param name='color'>rgb(1.0000, 1.0000, 1.0000)</param> <param name='wrap'>240</param> <param name='alignment'>0</param> <param name='width'>237</param> <param name='height'>130</param> </params> </node> </node> <node operation='over'> <node name='dropshadow' operation='dropshadow'> <params> <param name='opacity'>-4.487179</param> <param name='x'>3.750000</param> <param name='y'>2.500000</param> <param name='radius'>10.597015</param> </params> </node> <node operation='shift'> <params> <param name='x'>42.000000</param> <param name='y'>23.000000</param> </params> </node> <node operation='text'> <params> <param name='string'>GEGL</param> <param name='font'>Sans</param> <param name='size'>76.038217</param> <param name='color'>rgb(0.3093, 0.3910, 0.1680)</param> <param name='wrap'>-1</param> <param name='alignment'>0</param> <param name='width'>208</param> <param name='height'>89</param> </params> </node> </node> <node operation='whitebalance'> <params> <param name='high-a-delta'>0.365079</param> <param name='high-b-delta'>0.026511</param> <param name='low-a-delta'>0.000000</param> <param name='low-b-delta'>0.000000</param> <param name='saturation'>0.319548</param> </params> </node> <node operation='brightness-contrast'> <params> <param name='contrast'>0.229008</param> <param name='brightness'>0.000000</param> </params> </node> <node operation='FractalExplorer'> <params> <param name='width'>400</param> <param name='height'>290</param> <param name='fractaltype'>1</param> <param name='xmin'>-1.312500</param> <param name='xmax'>0.000000</param> <param name='ymin'>-0.609375</param> <param name='ymax'>0.562500</param> <param name='iter'>100</param> <param name='cx'>-0.820312</param> <param name='cy'>0.195312</param> <param name='redstretch'>1.000000</param> <param name='greenstretch'>1.000000</param> <param name='bluestretch'>1.000000</param> <param name='redmode'>1</param> <param name='greenmode'>1</param> <param name='bluemode'>0</param> <param name='redinvert'>false</param> <param name='greeninvert'>false</param> <param name='blueinvert'>false</param> <param name='ncolors'>256</param> <param name='useloglog'>false</param> </params> </node> </gegl>"
+#define DEFAULT_COMPOSITION "<?xml version='1.0' encoding='UTF-8'?> <gegl> <node operation='crop'> <params> <param name='x'>0.000000</param> <param name='y'>0.000000</param> <param name='width'>400.000000</param> <param name='height'>290.000000</param> </params> </node> <node operation='over'> <node operation='shift'> <params> <param name='x'>50.000000</param> <param name='y'>113.000000</param> </params> </node> <node operation='dropshadow'> <params> <param name='opacity'>2.000000</param> <param name='x'>2.000000</param> <param name='y'>2.000000</param> <param name='radius'>3.000000</param> </params> </node> <node operation='text'> <params> <param name='string'>A graph based image processing and\ncompositing engine.</param> <param name='font'>Sans</param> <param name='size'>10.000000</param> <param name='color'>rgb(1.0000, 1.0000, 1.0000)</param> <param name='wrap'>-1</param> <param name='alignment'>0</param> <param name='width'>178</param> <param name='height'>26</param> </params> </node> </node> <node operation='over'> <node operation='shift'> <params> <param name='x'>132.000000</param> <param name='y'>180.000000</param> </params> </node> <node operation='dropshadow'> <params> <param name='opacity'>2.000000</param> <param name='x'>2.000000</param> <param name='y'>2.000000</param> <param name='radius'>3.000000</param> </params> </node> <node operation='text'> <params> <param name='string'>2000-2007 © Calvin Williamson, Caroline Dahloff, Manish Singh, Jay Cox, Daniel Rogers, Sven Neumann, Michael Natterer, Øyvind Kolås, Philip Lafleur, Dominik Ernst, Richard Kralovic, Kevin Cozens, Victor Bogado, Martin Nordholts, Geert Jordaens, Michael Schumacher, Garry R. Osgood and Jakub Steiner</param> <param name='font'>Sans</param> <param name='size'>10.458599</param> <param name='color'>rgb(1.0000, 1.0000, 1.0000)</param> <param name='wrap'>240</param> <param name='alignment'>0</param> <param name='width'>237</param> <param name='height'>130</param> </params> </node> </node> <node operation='over'> <node name='dropshadow' operation='dropshadow'> <params> <param name='opacity'>-4.487179</param> <param name='x'>3.750000</param> <param name='y'>2.500000</param> <param name='radius'>10.597015</param> </params> </node> <node operation='shift'> <params> <param name='x'>42.000000</param> <param name='y'>23.000000</param> </params> </node> <node operation='text'> <params> <param name='string'>GEGL</param> <param name='font'>Sans</param> <param name='size'>76.038217</param> <param name='color'>rgb(0.3093, 0.3910, 0.1680)</param> <param name='wrap'>-1</param> <param name='alignment'>0</param> <param name='width'>208</param> <param name='height'>89</param> </params> </node> </node> <node operation='whitebalance'> <params> <param name='high-a-delta'>0.365079</param> <param name='high-b-delta'>0.026511</param> <param name='low-a-delta'>0.000000</param> <param name='low-b-delta'>0.000000</param> <param name='saturation'>0.319548</param> </params> </node> <node operation='brightness-contrast'> <params> <param name='contrast'>0.229008</param> <param name='brightness'>0.000000</param> </params> </node> <node operation='fractal-explorer'> <params> <param name='width'>400</param> <param name='height'>290</param> <param name='fractaltype'>1</param> <param name='xmin'>-1.312500</param> <param name='xmax'>0.000000</param> <param name='ymin'>-0.609375</param> <param name='ymax'>0.562500</param> <param name='iter'>100</param> <param name='cx'>-0.820312</param> <param name='cy'>0.195312</param> <param name='redstretch'>1.000000</param> <param name='greenstretch'>1.000000</param> <param name='bluestretch'>1.000000</param> <param name='redmode'>1</param> <param name='greenmode'>1</param> <param name='bluemode'>0</param> <param name='redinvert'>false</param> <param name='greeninvert'>false</param> <param name='blueinvert'>false</param> <param name='ncolors'>256</param> <param name='useloglog'>false</param> </params> </node> </gegl>"
 
 int
 main (int argc, char **argv)
