@@ -1,3 +1,9 @@
+2008-03-03  Øyvind Kolås  <pippin@gimp.org>
+
+	* examples/parsexml.c: updated default composition to match current
+	GEGL default composition.
+	* clutter-gegl.c: (computed_event): reindented code.
+
 2008-01-10  Øyvind Kolås     <pippin@o-hand.com>
 
 	* Imported into svn.
